--- a/bjs/08_if_else/style.css
+++ b/bjs/08_if_else/style.css
@@ -1,4 +1,154 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .game-card {
     height: 100vh;
     font-family: 'Open Sans', monospace;
+}
+
+.hidden {
+    display: none;
+}
+
+h1, h2 {
+    color: var(--blue);
+    font-weight: 600;
+    text-align: center;
+}
+
+h1 {
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: .1rem solid;
+}
+
+.row {
+    justify-content: center;
+}
+
+main {
+    height: 100%;
+}
+
+section {
+    padding: 4rem 0;
+}
+
+header {
+    background-color: var(--blue);
+    padding: 1rem 0;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+
+header nav ul {
+    margin: 0;
+    display: flex;
+    list-style-type: none;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+header nav ul li a {
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.1rem 2rem 1.05rem;
+}
+
+header nav ul li a:hover {
+    color: #000;
+    background-color: #fff;
+    text-decoration: none;
+}
+
+main {
+    min-height: calc(100vh - 112px);
+}
+
+section ol {
+    margin-left: 1rem;
+}
+
+section ol li {
+    padding: .5rem;
+}
+
+section ol li::marker {
+    color: var(--blue);
+    font-weight: 600;
+}
+
+section ol li span,
+.modal-body p span {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--blue);
+}
+
+#start .row > div {
+    padding: 2rem;
+    border: .1rem solid var(--blue);
+    border-radius: 1rem;
+}
+
+.btn.btn-primary {
+    min-width: 10rem;
+    margin: 0 auto;
+    display: block;
+}
+
+.modal {
+    background-color: rgba(0, 0, 0, .9);
+}
+
+input.form-control {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.modal-body p {
+    padding: 2rem 0 1rem 0;
+    text-align: center;
+}
+
+#game .card-body .btn.btn-primary,
+#game .card-body .btn.btn-success,
+.card-footer .btn.btn-secondary {
+    min-width: 10rem;
+    border-radius: .2rem;
+}
+
+.card-body .btn.btn-primary,
+.card-body .btn.btn-success {
+    margin: .5rem;
+}
+
+p.m-0 {
+    font-size: 1.2rem;
+}
+
+h3.m-0 {
+    font-size: 1.2rem;
+}
+
+#answerField span {
+    font-size: 1.7rem;
+    color: var(--blue);
+}
+
+footer {
+    background-color: var(--gray);
+}
+
+footer p {
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+    color: #fff;
 }
